--- a/app/templates/hub.html
+++ b/app/templates/hub.html
@@ -6,6 +6,17 @@
 
 {% block extra_css %}
 <link rel="stylesheet" href="{{ url_for('static', filename='css/hub-style.css') }}">
+<style>
+    body {
+        background-image: url('{{ versioned_static("images/hinh-nen.webp") }}') !important;
+    }
+
+    @supports (-webkit-touch-callout: none) {
+        body::before {
+            background-image: url('{{ versioned_static("images/hinh-nen.webp") }}') !important;
+        }
+    }
+</style>
 {% endblock %}
 {% block content %}
 <div class="hub-main-container">
